Trying to fix image stretching

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -4,11 +4,6 @@
     padding: 0;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
 body {
     font-family: 'Quicksand', sans-serif;
     display: flex;
@@ -20,19 +15,9 @@ body {
     color: black;
 }
 
-
 #time {
     padding: 25px 0px;
     font-size: 8rem;
-}
-
-h1 {
-    margin-bottom: 3rem;
-}
-
-h2 {
-    margin-bottom: 0.5rem;
-    opacity: 0.6;
 }
 
 @media(max-width: 700px) {
@@ -47,7 +32,7 @@ h2 {
 
 #login {
     float: right;
-    color: black;
+    color: whitesmoke;
     text-decoration: none;
     font-family: 'Quicksand', sans-serif;
     font-size: 1rem;
@@ -59,18 +44,32 @@ h2 {
     background-color: teal;
 }
 
+
+/* .rows {
+    padding: 20px;
+} */
+
+h1 {
+    margin-bottom: 3rem;
+}
+
+h2 {
+    margin-bottom: 0.5rem;
+    opacity: 0.6;
+}
+
 nav {
     position: fixed;
     top: 0;
     width: 100%;
     height: 50px;
-    background-color: rgb(192, 190, 190);
+    background-color: rgb(73, 73, 73);
     /* opacity: 0.6; */
 }
 
 nav p {
     font-family: 'Quicksand', sans-serif;
-    color: black;
+    color: whitesmoke;
     font-size: 2rem;
     line-height: 50px;
     padding: 0px 5px;
@@ -90,7 +89,7 @@ nav ul li {
 nav ul li a {
     display: block;
     font-family: 'Quicksand', sans-serif;
-    color: black;
+    color: whitesmoke;
     font-size: 1rem;
     padding: 15px 14px;
     text-decoration: none;
@@ -103,7 +102,7 @@ nav ul li:hover ul {
 nav ul li ul {
     display: none;
     position: absolute;
-    background-color: whitesmoke;
+    background-color: darkgrey;
 }
 
 nav ul li ul li {
@@ -119,93 +118,129 @@ nav ul li ul a:hover {
     background-color: teal;
 }
 
+
 /* Pop up function */
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
+
+<style>body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 .LoadedImage {
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.3s;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
-.LoadedImage:hover {opacity: 0.7;}
+.LoadedImage:hover {
+    opacity: 0.7;
+}
+
 
 /* The Modal (background) */
+
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.9);
+    /* Black w/ opacity */
 }
+
 
 /* Modal Content (image) */
+
 .modal-content {
-  margin: auto;
-  display: block;
-  width: 40%;
-  max-width: 400px;
+    margin: auto;
+    display: block;
+    width: 40%;
+    max-width: 400px;
 }
+
 
 /* Caption of Modal Image */
+
 #caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: #ccc;
-  padding: 10px 0;
-  height: 150px;
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
 }
 
+
 /* Add Animation */
-.modal-content, #caption {  
-  -webkit-animation-name: zoom;
-  -webkit-animation-duration: 0.6s;
-  animation-name: zoom;
-  animation-duration: 0.6s;
+
+.modal-content,
+#caption {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
 }
 
 @-webkit-keyframes zoom {
-  from {-webkit-transform:scale(0)} 
-  to {-webkit-transform:scale(1)}
+    from {
+        -webkit-transform: scale(0)
+    }
+    to {
+        -webkit-transform: scale(1)
+    }
 }
 
 @keyframes zoom {
-  from {transform:scale(0)} 
-  to {transform:scale(1)}
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
 }
 
+
 /* The Close Button */
+
 .close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
 }
 
 .close:hover,
 .close:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
 }
 
+
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-  .modal-content {
-    width: 100%;
-  }
+
+@media only screen and (max-width: 700px) {
+    .modal-content {
+        width: 100%;
+    }
 }
+
 </style>
